--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ MQTT_PASS=mqtt_password
 # MQTT_PORT=1883
 # MQTT_KEEPALIVE=60
 
-#BRIDGE_ID=rtl-haos-host
+#BRIDGE_ID=rtl-haos-bridge
 
 # --- PUBLISHING SETTINGS ---
 # expire_after in seconds for sensor entities in Home Assistant
